--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
 
-    <h1>Understanding Git Repo</h1>
+    <h1>Understanding Git Repo on Github</h1>
     <p style="color:red">Source version control</p>
     <button>Book Now</button>
 
