--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <body>
 
     <h1>Understanding Git Repo on Github</h1>
+    <h1>mlops training Git Repo on Github</h1>
     <p style="color:red">Source version control</p>
     <button>Book Now</button>
     <button>Apply Now</button>
 
 </body>
 
-</html>
+</html>\
