--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
     <h1>Understanding Git Repo on Github</h1>
-    git-client-2
+    <h1>git-client-2</h1>>
     <h1>mlops training Git Repo on Github</h1>
     <p style="color:red">Source version control</p>
     <button>Book Now</button>
